modify server environment

--- a/package.json
+++ b/package.json
@@ -162,6 +162,156 @@
     "3155": "nodemon --watch dev -e js src/network.js 3155 http://localhost:3155 &",
     "3156": "nodemon --watch dev -e js src/network.js 3156 http://localhost:3156 &",
     "3157": "nodemon --watch dev -e js src/network.js 3157 http://localhost:3157 &",
+    "3158": "nodemon --watch dev -e js src/network.js 3158 http://localhost:3158 &",
+    "3159": "nodemon --watch dev -e js src/network.js 3159 http://localhost:3159 &",
+    "3160": "nodemon --watch dev -e js src/network.js 3160 http://localhost:3160 &",
+    "3161": "nodemon --watch dev -e js src/network.js 3161 http://localhost:3161 &",
+    "3162": "nodemon --watch dev -e js src/network.js 3162 http://localhost:3162 &",
+    "3163": "nodemon --watch dev -e js src/network.js 3163 http://localhost:3163 &",
+    "3164": "nodemon --watch dev -e js src/network.js 3164 http://localhost:3164 &",
+    "3165": "nodemon --watch dev -e js src/network.js 3165 http://localhost:3165 &",
+    "3166": "nodemon --watch dev -e js src/network.js 3166 http://localhost:3166 &",
+    "3167": "nodemon --watch dev -e js src/network.js 3167 http://localhost:3167 &",
+    "3168": "nodemon --watch dev -e js src/network.js 3168 http://localhost:3168 &",
+    "3169": "nodemon --watch dev -e js src/network.js 3169 http://localhost:3169 &",
+    "3170": "nodemon --watch dev -e js src/network.js 3170 http://localhost:3170 &",
+    "3171": "nodemon --watch dev -e js src/network.js 3171 http://localhost:3171 &",
+    "3172": "nodemon --watch dev -e js src/network.js 3172 http://localhost:3172 &",
+    "3173": "nodemon --watch dev -e js src/network.js 3173 http://localhost:3173 &",
+    "3174": "nodemon --watch dev -e js src/network.js 3174 http://localhost:3174 &",
+    "3175": "nodemon --watch dev -e js src/network.js 3175 http://localhost:3175 &",
+    "3176": "nodemon --watch dev -e js src/network.js 3176 http://localhost:3176 &",
+    "3177": "nodemon --watch dev -e js src/network.js 3177 http://localhost:3177 &",
+    "3178": "nodemon --watch dev -e js src/network.js 3178 http://localhost:3178 &",
+    "3179": "nodemon --watch dev -e js src/network.js 3179 http://localhost:3179 &",
+    "3180": "nodemon --watch dev -e js src/network.js 3180 http://localhost:3180 &",
+    "3181": "nodemon --watch dev -e js src/network.js 3181 http://localhost:3181 &",
+    "3182": "nodemon --watch dev -e js src/network.js 3182 http://localhost:3182 &",
+    "3183": "nodemon --watch dev -e js src/network.js 3183 http://localhost:3183 &",
+    "3184": "nodemon --watch dev -e js src/network.js 3184 http://localhost:3184 &",
+    "3185": "nodemon --watch dev -e js src/network.js 3185 http://localhost:3185 &",
+    "3186": "nodemon --watch dev -e js src/network.js 3186 http://localhost:3186 &",
+    "3187": "nodemon --watch dev -e js src/network.js 3187 http://localhost:3187 &",
+    "3188": "nodemon --watch dev -e js src/network.js 3188 http://localhost:3188 &",
+    "3189": "nodemon --watch dev -e js src/network.js 3189 http://localhost:3189 &",
+    "3190": "nodemon --watch dev -e js src/network.js 3190 http://localhost:3190 &",
+    "3191": "nodemon --watch dev -e js src/network.js 3191 http://localhost:3191 &",
+    "3192": "nodemon --watch dev -e js src/network.js 3192 http://localhost:3192 &",
+    "3193": "nodemon --watch dev -e js src/network.js 3193 http://localhost:3193 &",
+    "3194": "nodemon --watch dev -e js src/network.js 3194 http://localhost:3194 &",
+    "3195": "nodemon --watch dev -e js src/network.js 3195 http://localhost:3195 &",
+    "3196": "nodemon --watch dev -e js src/network.js 3196 http://localhost:3196 &",
+    "3197": "nodemon --watch dev -e js src/network.js 3197 http://localhost:3197 &",
+    "3198": "nodemon --watch dev -e js src/network.js 3198 http://localhost:3198 &",
+    "3199": "nodemon --watch dev -e js src/network.js 3199 http://localhost:3199 &",
+    "3200": "nodemon --watch dev -e js src/network.js 3200 http://localhost:3200 &",
+    "3201": "nodemon --watch dev -e js src/network.js 3201 http://localhost:3201 &",
+    "3202": "nodemon --watch dev -e js src/network.js 3202 http://localhost:3202 &",
+    "3203": "nodemon --watch dev -e js src/network.js 3203 http://localhost:3203 &",
+    "3204": "nodemon --watch dev -e js src/network.js 3204 http://localhost:3204 &",
+    "3205": "nodemon --watch dev -e js src/network.js 3205 http://localhost:3205 &",
+    "3206": "nodemon --watch dev -e js src/network.js 3206 http://localhost:3206 &",
+    "3207": "nodemon --watch dev -e js src/network.js 3207 http://localhost:3207 &",
+    "3208": "nodemon --watch dev -e js src/network.js 3208 http://localhost:3208 &",
+    "3209": "nodemon --watch dev -e js src/network.js 3209 http://localhost:3209 &",
+    "3210": "nodemon --watch dev -e js src/network.js 3210 http://localhost:3210 &",
+    "3211": "nodemon --watch dev -e js src/network.js 3211 http://localhost:3211 &",
+    "3212": "nodemon --watch dev -e js src/network.js 3212 http://localhost:3212 &",
+    "3213": "nodemon --watch dev -e js src/network.js 3213 http://localhost:3213 &",
+    "3214": "nodemon --watch dev -e js src/network.js 3214 http://localhost:3214 &",
+    "3215": "nodemon --watch dev -e js src/network.js 3215 http://localhost:3215 &",
+    "3216": "nodemon --watch dev -e js src/network.js 3216 http://localhost:3216 &",
+    "3217": "nodemon --watch dev -e js src/network.js 3217 http://localhost:3217 &",
+    "3218": "nodemon --watch dev -e js src/network.js 3218 http://localhost:3218 &",
+    "3219": "nodemon --watch dev -e js src/network.js 3219 http://localhost:3219 &",
+    "3220": "nodemon --watch dev -e js src/network.js 3220 http://localhost:3220 &",
+    "3221": "nodemon --watch dev -e js src/network.js 3221 http://localhost:3221 &",
+    "3222": "nodemon --watch dev -e js src/network.js 3222 http://localhost:3222 &",
+    "3223": "nodemon --watch dev -e js src/network.js 3223 http://localhost:3223 &",
+    "3224": "nodemon --watch dev -e js src/network.js 3224 http://localhost:3224 &",
+    "3225": "nodemon --watch dev -e js src/network.js 3225 http://localhost:3225 &",
+    "3226": "nodemon --watch dev -e js src/network.js 3226 http://localhost:3226 &",
+    "3227": "nodemon --watch dev -e js src/network.js 3227 http://localhost:3227 &",
+    "3228": "nodemon --watch dev -e js src/network.js 3228 http://localhost:3228 &",
+    "3229": "nodemon --watch dev -e js src/network.js 3229 http://localhost:3229 &",
+    "3230": "nodemon --watch dev -e js src/network.js 3230 http://localhost:3230 &",
+    "3231": "nodemon --watch dev -e js src/network.js 3231 http://localhost:3231 &",
+    "3232": "nodemon --watch dev -e js src/network.js 3232 http://localhost:3232 &",
+    "3233": "nodemon --watch dev -e js src/network.js 3233 http://localhost:3233 &",
+    "3234": "nodemon --watch dev -e js src/network.js 3234 http://localhost:3234 &",
+    "3235": "nodemon --watch dev -e js src/network.js 3235 http://localhost:3235 &",
+    "3236": "nodemon --watch dev -e js src/network.js 3236 http://localhost:3236 &",
+    "3237": "nodemon --watch dev -e js src/network.js 3237 http://localhost:3237 &",
+    "3238": "nodemon --watch dev -e js src/network.js 3238 http://localhost:3238 &",
+    "3239": "nodemon --watch dev -e js src/network.js 3239 http://localhost:3239 &",
+    "3240": "nodemon --watch dev -e js src/network.js 3240 http://localhost:3240 &",
+    "3241": "nodemon --watch dev -e js src/network.js 3241 http://localhost:3241 &",
+    "3242": "nodemon --watch dev -e js src/network.js 3242 http://localhost:3242 &",
+    "3243": "nodemon --watch dev -e js src/network.js 3243 http://localhost:3243 &",
+    "3244": "nodemon --watch dev -e js src/network.js 3244 http://localhost:3244 &",
+    "3245": "nodemon --watch dev -e js src/network.js 3245 http://localhost:3245 &",
+    "3246": "nodemon --watch dev -e js src/network.js 3246 http://localhost:3246 &",
+    "3247": "nodemon --watch dev -e js src/network.js 3247 http://localhost:3247 &",
+    "3248": "nodemon --watch dev -e js src/network.js 3248 http://localhost:3248 &",
+    "3249": "nodemon --watch dev -e js src/network.js 3249 http://localhost:3249 &",
+    "3250": "nodemon --watch dev -e js src/network.js 3250 http://localhost:3250 &",
+    "3251": "nodemon --watch dev -e js src/network.js 3251 http://localhost:3251 &",
+    "3252": "nodemon --watch dev -e js src/network.js 3252 http://localhost:3252 &",
+    "3253": "nodemon --watch dev -e js src/network.js 3253 http://localhost:3253 &",
+    "3254": "nodemon --watch dev -e js src/network.js 3254 http://localhost:3254 &",
+    "3255": "nodemon --watch dev -e js src/network.js 3255 http://localhost:3255 &",
+    "3256": "nodemon --watch dev -e js src/network.js 3256 http://localhost:3256 &",
+    "3257": "nodemon --watch dev -e js src/network.js 3257 http://localhost:3257 &",
+    "3258": "nodemon --watch dev -e js src/network.js 3258 http://localhost:3258 &",
+    "3259": "nodemon --watch dev -e js src/network.js 3259 http://localhost:3259 &",
+    "3260": "nodemon --watch dev -e js src/network.js 3260 http://localhost:3260 &",
+    "3261": "nodemon --watch dev -e js src/network.js 3261 http://localhost:3261 &",
+    "3262": "nodemon --watch dev -e js src/network.js 3262 http://localhost:3262 &",
+    "3263": "nodemon --watch dev -e js src/network.js 3263 http://localhost:3263 &",
+    "3264": "nodemon --watch dev -e js src/network.js 3264 http://localhost:3264 &",
+    "3265": "nodemon --watch dev -e js src/network.js 3265 http://localhost:3265 &",
+    "3266": "nodemon --watch dev -e js src/network.js 3266 http://localhost:3266 &",
+    "3267": "nodemon --watch dev -e js src/network.js 3267 http://localhost:3267 &",
+    "3268": "nodemon --watch dev -e js src/network.js 3268 http://localhost:3268 &",
+    "3269": "nodemon --watch dev -e js src/network.js 3269 http://localhost:3269 &",
+    "3270": "nodemon --watch dev -e js src/network.js 3270 http://localhost:3270 &",
+    "3271": "nodemon --watch dev -e js src/network.js 3271 http://localhost:3271 &",
+    "3272": "nodemon --watch dev -e js src/network.js 3272 http://localhost:3272 &",
+    "3273": "nodemon --watch dev -e js src/network.js 3273 http://localhost:3273 &",
+    "3274": "nodemon --watch dev -e js src/network.js 3274 http://localhost:3274 &",
+    "3275": "nodemon --watch dev -e js src/network.js 3275 http://localhost:3275 &",
+    "3276": "nodemon --watch dev -e js src/network.js 3276 http://localhost:3276 &",
+    "3277": "nodemon --watch dev -e js src/network.js 3277 http://localhost:3277 &",
+    "3278": "nodemon --watch dev -e js src/network.js 3278 http://localhost:3278 &",
+    "3279": "nodemon --watch dev -e js src/network.js 3279 http://localhost:3279 &",
+    "3280": "nodemon --watch dev -e js src/network.js 3280 http://localhost:3280 &",
+    "3281": "nodemon --watch dev -e js src/network.js 3281 http://localhost:3281 &",
+    "3282": "nodemon --watch dev -e js src/network.js 3282 http://localhost:3282 &",
+    "3283": "nodemon --watch dev -e js src/network.js 3283 http://localhost:3283 &",
+    "3284": "nodemon --watch dev -e js src/network.js 3284 http://localhost:3284 &",
+    "3285": "nodemon --watch dev -e js src/network.js 3285 http://localhost:3285 &",
+    "3286": "nodemon --watch dev -e js src/network.js 3286 http://localhost:3286 &",
+    "3287": "nodemon --watch dev -e js src/network.js 3287 http://localhost:3287 &",
+    "3288": "nodemon --watch dev -e js src/network.js 3288 http://localhost:3288 &",
+    "3289": "nodemon --watch dev -e js src/network.js 3289 http://localhost:3289 &",
+    "3290": "nodemon --watch dev -e js src/network.js 3290 http://localhost:3290 &",
+    "3291": "nodemon --watch dev -e js src/network.js 3291 http://localhost:3291 &",
+    "3292": "nodemon --watch dev -e js src/network.js 3292 http://localhost:3292 &",
+    "3293": "nodemon --watch dev -e js src/network.js 3293 http://localhost:3293 &",
+    "3294": "nodemon --watch dev -e js src/network.js 3294 http://localhost:3294 &",
+    "3295": "nodemon --watch dev -e js src/network.js 3295 http://localhost:3295 &",
+    "3296": "nodemon --watch dev -e js src/network.js 3296 http://localhost:3296 &",
+    "3297": "nodemon --watch dev -e js src/network.js 3297 http://localhost:3297 &",
+    "3298": "nodemon --watch dev -e js src/network.js 3298 http://localhost:3298 &",
+    "3299": "nodemon --watch dev -e js src/network.js 3299 http://localhost:3299 &",
+    "3300": "nodemon --watch dev -e js src/network.js 3300 http://localhost:3300 &",
+    "3301": "nodemon --watch dev -e js src/network.js 3301 http://localhost:3301 &",
+    "3302": "nodemon --watch dev -e js src/network.js 3302 http://localhost:3302 &",
+    "3303": "nodemon --watch dev -e js src/network.js 3303 http://localhost:3303 &",
+    "3304": "nodemon --watch dev -e js src/network.js 3304 http://localhost:3304 &",
+    "3305": "nodemon --watch dev -e js src/network.js 3305 http://localhost:3305 &",
+    "3306": "nodemon --watch dev -e js src/network.js 3306 http://localhost:3306 &",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
